started work on second neural net - to include gradient descent and backpropagation

--- a/neural-networks/basic-neural-net-2.ipynb
+++ b/neural-networks/basic-neural-net-2.ipynb
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BasicAnn:\n",
-    "    def __init__(self, X_train, y_train, learning_rate):\n",
-    "        self.weights = np.array([np.random.randn() for _ in range(len(y_train))])\n",
-    "        self.bias = np.random.randn()\n",
+    "    def __init__(self, layers, learning_rate):\n",
+    "        self.layers = layers\n",
     "        self.learning_rate = learning_rate\n",
-    "        self._X_train = np.array(X_train)\n",
-    "        self._y_train = np.array(y_train)\n",
+    "        self.biases = [np.zeros((s,1)) for s in layers[1:]]\n",
+    "        self.weight_shapes = [(layers[i+1], layers[i]) for i in range(len(layers)-1)]\n",
+    "        self.weights = [np.random.standard_normal(shape) for shape in self.weight_shapes]\n",
     "        \n",
     "    def _sigmoid(self, x):\n",
     "        return 1 / (1 + np.exp(-x))\n",
@@ -34,8 +34,22 @@
     "        layer_2 = self._sigmoid(layer_1)\n",
     "        return layer_2\n",
     "    \n",
-    "    def "
+    "myAnn = BasicAnn((2,3,5,2), 0.01)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
