--- a/cob107/cw2/CW2 ANN Coursework.ipynb
+++ b/cob107/cw2/CW2 ANN Coursework.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "orginal_df = pd.read_excel('Original-River-Data.xlsx', usecols='A:I', skiprows=1, index=)"
+    "original_df = pd.read_excel('Original-River-Data.xlsx', usecols='A:I', skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -347,18 +347,18 @@
        "19           0         19.2         26.4  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "orginal_df.head(20)"
+    "original_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +385,450 @@
     }
    ],
    "source": [
-    "orginal_df.info()"
+    "original_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Crakehill</th>\n",
+       "      <th>Skip Bridge</th>\n",
+       "      <th>Westwick</th>\n",
+       "      <th>Skelton</th>\n",
+       "      <th>Arkengarthdale</th>\n",
+       "      <th>East Cowton</th>\n",
+       "      <th>Malham Tarn</th>\n",
+       "      <th>Snaizeholme</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1993-01-01</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>4.393</td>\n",
+       "      <td>9.291</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1993-01-02</td>\n",
+       "      <td>9.95</td>\n",
+       "      <td>4.239</td>\n",
+       "      <td>8.622</td>\n",
+       "      <td>24.86</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1993-01-03</td>\n",
+       "      <td>9.46</td>\n",
+       "      <td>4.124</td>\n",
+       "      <td>8.057</td>\n",
+       "      <td>23.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1993-01-04</td>\n",
+       "      <td>9.41</td>\n",
+       "      <td>4.363</td>\n",
+       "      <td>7.925</td>\n",
+       "      <td>23.47</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>61.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1993-01-05</td>\n",
+       "      <td>26.30</td>\n",
+       "      <td>11.962</td>\n",
+       "      <td>58.704</td>\n",
+       "      <td>60.7</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>111.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1993-01-06</td>\n",
+       "      <td>32.10</td>\n",
+       "      <td>10.237</td>\n",
+       "      <td>34.416</td>\n",
+       "      <td>98.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1993-01-07</td>\n",
+       "      <td>19.30</td>\n",
+       "      <td>7.254</td>\n",
+       "      <td>22.263</td>\n",
+       "      <td>56.99</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1993-01-08</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>7.266</td>\n",
+       "      <td>29.587</td>\n",
+       "      <td>56.66</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1993-01-09</td>\n",
+       "      <td>35.50</td>\n",
+       "      <td>8.153</td>\n",
+       "      <td>60.253</td>\n",
+       "      <td>78.1</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>55.2</td>\n",
+       "      <td>104.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1993-01-10</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>13.276</td>\n",
+       "      <td>93.951</td>\n",
+       "      <td>125.7</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>136.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0  Crakehill Skip Bridge  Westwick Skelton  Arkengarthdale  \\\n",
+       "0 1993-01-01      10.40       4.393     9.291    26.1             0.0   \n",
+       "1 1993-01-02       9.95       4.239     8.622   24.86             0.0   \n",
+       "2 1993-01-03       9.46       4.124     8.057    23.6             0.0   \n",
+       "3 1993-01-04       9.41       4.363     7.925   23.47             2.4   \n",
+       "4 1993-01-05      26.30      11.962    58.704    60.7            11.2   \n",
+       "5 1993-01-06      32.10      10.237    34.416   98.01             0.0   \n",
+       "6 1993-01-07      19.30       7.254    22.263   56.99             5.6   \n",
+       "7 1993-01-08      22.00       7.266    29.587   56.66             1.6   \n",
+       "8 1993-01-09      35.50       8.153    60.253    78.1            14.4   \n",
+       "9 1993-01-10      51.00      13.276    93.951   125.7            20.8   \n",
+       "\n",
+       "  East Cowton  Malham Tarn  Snaizeholme  \n",
+       "0           0          0.0          4.0  \n",
+       "1           0          0.8          0.0  \n",
+       "2           0          0.8          0.0  \n",
+       "3        24.8          0.8         61.6  \n",
+       "4         5.6         33.6        111.2  \n",
+       "5           0          1.6          0.8  \n",
+       "6           4         17.6         36.0  \n",
+       "7           0          1.6          2.4  \n",
+       "8         0.8         55.2        104.8  \n",
+       "9         2.4         76.0        136.8  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "river_data = original_df.copy()\n",
+    "river_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Crakehill MDF (Cumecs)</th>\n",
+       "      <th>Skip Bridge MDF (Cumecs)</th>\n",
+       "      <th>Westwick MDF (Cumecs)</th>\n",
+       "      <th>Skelton MDF (Cumecs)</th>\n",
+       "      <th>Arkengarthdale DRT (mm)</th>\n",
+       "      <th>East Cowton DRT (mm)</th>\n",
+       "      <th>Malham Tarn DRT (mm)</th>\n",
+       "      <th>Snaizeholme DRT (mm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1993-01-01</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>4.393</td>\n",
+       "      <td>9.291</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1993-01-02</td>\n",
+       "      <td>9.95</td>\n",
+       "      <td>4.239</td>\n",
+       "      <td>8.622</td>\n",
+       "      <td>24.86</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1993-01-03</td>\n",
+       "      <td>9.46</td>\n",
+       "      <td>4.124</td>\n",
+       "      <td>8.057</td>\n",
+       "      <td>23.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1993-01-04</td>\n",
+       "      <td>9.41</td>\n",
+       "      <td>4.363</td>\n",
+       "      <td>7.925</td>\n",
+       "      <td>23.47</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>61.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1993-01-05</td>\n",
+       "      <td>26.30</td>\n",
+       "      <td>11.962</td>\n",
+       "      <td>58.704</td>\n",
+       "      <td>60.7</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>111.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  Crakehill MDF (Cumecs) Skip Bridge MDF (Cumecs)  \\\n",
+       "0 1993-01-01                   10.40                    4.393   \n",
+       "1 1993-01-02                    9.95                    4.239   \n",
+       "2 1993-01-03                    9.46                    4.124   \n",
+       "3 1993-01-04                    9.41                    4.363   \n",
+       "4 1993-01-05                   26.30                   11.962   \n",
+       "\n",
+       "   Westwick MDF (Cumecs) Skelton MDF (Cumecs)  Arkengarthdale DRT (mm)  \\\n",
+       "0                  9.291                 26.1                      0.0   \n",
+       "1                  8.622                24.86                      0.0   \n",
+       "2                  8.057                 23.6                      0.0   \n",
+       "3                  7.925                23.47                      2.4   \n",
+       "4                 58.704                 60.7                     11.2   \n",
+       "\n",
+       "  East Cowton DRT (mm)  Malham Tarn DRT (mm)  Snaizeholme DRT (mm)  \n",
+       "0                    0                   0.0                   4.0  \n",
+       "1                    0                   0.8                   0.0  \n",
+       "2                    0                   0.8                   0.0  \n",
+       "3                 24.8                   0.8                  61.6  \n",
+       "4                  5.6                  33.6                 111.2  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Renaming Headers\n",
+    "\n",
+    "new_columns = {'Unnamed: 0': 'Date'}\n",
+    "new_columns.update({col: f\"{col} MDF (Cumecs)\" for col in river_data.columns[1:5]})\n",
+    "new_columns.update({col: f\"{col} DRT (mm)\" for col in river_data.columns[5:]})\n",
+    "\n",
+    "river_data.rename(\n",
+    "    columns=new_columns, \n",
+    "    inplace=True\n",
+    ")\n",
+    "river_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### MDF - Mean Daily Flow\n",
+    "##### DRT - Daily Rainfall Total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1461 entries, 0 to 1460\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                    Non-Null Count  Dtype         \n",
+      "---  ------                    --------------  -----         \n",
+      " 0   Date                      1461 non-null   datetime64[ns]\n",
+      " 1   Crakehill MDF (Cumecs)    1461 non-null   float64       \n",
+      " 2   Skip Bridge MDF (Cumecs)  1461 non-null   object        \n",
+      " 3   Westwick MDF (Cumecs)     1461 non-null   float64       \n",
+      " 4   Skelton MDF (Cumecs)      1461 non-null   object        \n",
+      " 5   Arkengarthdale DRT (mm)   1461 non-null   float64       \n",
+      " 6   East Cowton DRT (mm)      1461 non-null   object        \n",
+      " 7   Malham Tarn DRT (mm)      1461 non-null   float64       \n",
+      " 8   Snaizeholme DRT (mm)      1461 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(5), object(3)\n",
+      "memory usage: 102.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "river_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unable to parse string \"a\" at position 1134",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Unable to parse string \"a\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-c3baa2735a5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Skip Bridge MDF (Cumecs)'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Skip Bridge MDF (Cumecs)'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Skelton MDF (Cumecs)'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Skelton MDF (Cumecs)'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'East Cowton DRT (mm)'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mriver_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'East Cowton DRT (mm)'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mriver_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/core/tools/numeric.py\u001b[0m in \u001b[0;36mto_numeric\u001b[0;34m(arg, errors, downcast)\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             values = lib.maybe_convert_numeric(\n\u001b[0;32m--> 150\u001b[0;31m                 \u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoerce_numeric\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcoerce_numeric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m             )\n\u001b[1;32m    152\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mValueError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Unable to parse string \"a\" at position 1134"
+     ]
+    }
+   ],
+   "source": [
+    "# Converting to non-numeric columns to numeric columns\n",
+    "\n",
+    "\n",
+    "river_data['Skip Bridge MDF (Cumecs)'] = pd.to_numeric(river_data['Skip Bridge MDF (Cumecs)'])\n",
+    "river_data['Skelton MDF (Cumecs)'] = pd.to_numeric(river_data['Skelton MDF (Cumecs)'])\n",
+    "river_data['East Cowton DRT (mm)'] = pd.to_numeric(river_data['East Cowton DRT (mm)'])\n",
+    "river_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                        0\n",
+       "Crakehill MDF (Cumecs)      0\n",
+       "Skip Bridge MDF (Cumecs)    0\n",
+       "Westwick MDF (Cumecs)       0\n",
+       "Skelton MDF (Cumecs)        0\n",
+       "Arkengarthdale DRT (mm)     0\n",
+       "East Cowton DRT (mm)        0\n",
+       "Malham Tarn DRT (mm)        0\n",
+       "Snaizeholme DRT (mm)        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
