implemented functionality to quickly build feature and target sets

--- a/cob107/cw2/Data-Processing.ipynb
+++ b/cob107/cw2/Data-Processing.ipynb
@@ -1916,25 +1916,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export_data = river_data.copy()\n",
-    "# export_data[\"Date\"] = export_data[\"Date\"].astype(\"string\")\n",
-    "# export_data.to_excel('River-Data-Cleaned.xlsx')"
+    "export_data = river_data.copy()\n",
+    "export_data[\"Date\"] = export_data[\"Date\"].astype(\"string\")\n",
+    "export_data.to_excel('River-Data-Cleaned.xlsx')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standardisation, Lagging and Splitting"
+    "# Lagging and Moving Averages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2282,7 @@
        "19                   0.0                  19.2                  26.4  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2454,7 +2454,7 @@
        "max              165.600000            252.000000            268.800000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2465,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2661,7 +2661,7 @@
        "19  1993-01-20                137.10"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3366,7 +3366,7 @@
        "[20 rows x 26 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3388,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4315,7 +4315,7 @@
        "[25 rows x 25 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4327,7 +4327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4491,7 +4491,7 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4503,7 +4503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4564,7 +4564,7 @@
        "[0 rows x 26 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4576,7 +4576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4895,7 +4895,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4913,7 +4913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -5070,7 +5070,7 @@
        "19  1993-01-20                137.10"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5084,7 +5084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5775,7 +5775,7 @@
        "[20 rows x 42 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5796,7 +5796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -7267,7 +7267,7 @@
        "[41 rows x 41 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7278,7 +7278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -7535,7 +7535,7 @@
        "[6 rows x 42 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7547,7 +7547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -7608,7 +7608,7 @@
        "[0 rows x 42 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7620,7 +7620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -7939,7 +7939,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7950,7 +7950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -8107,7 +8107,7 @@
        "25  1993-01-26                116.40"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8122,7 +8122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -8879,7 +8879,7 @@
        "[20 rows x 42 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8903,7 +8903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -9014,7 +9014,7 @@
        "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9026,7 +9026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -9087,7 +9087,7 @@
        "[0 rows x 42 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9099,7 +9099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -9448,7 +9448,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9459,7 +9459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -9616,7 +9616,7 @@
        "19  1993-01-20                137.10"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9631,7 +9631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -10322,7 +10322,7 @@
        "[20 rows x 42 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10343,7 +10343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -11814,7 +11814,7 @@
        "[41 rows x 41 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11825,7 +11825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -12154,7 +12154,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12165,7 +12165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -12322,7 +12322,7 @@
        "19  1993-01-20                137.10"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12337,7 +12337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -13094,7 +13094,7 @@
        "[20 rows x 42 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13117,7 +13117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -13228,7 +13228,7 @@
        "[1 rows x 42 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13239,7 +13239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -13300,7 +13300,7 @@
        "[0 rows x 42 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13312,7 +13312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -15213,7 +15213,7 @@
        "[41 rows x 41 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15224,7 +15224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -15573,7 +15573,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15591,7 +15591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -15910,7 +15910,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15921,7 +15921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -16240,7 +16240,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16251,7 +16251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -16600,7 +16600,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16611,7 +16611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -16960,7 +16960,7 @@
        "[8 rows x 41 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16971,7 +16971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16980,7 +16980,7 @@
     "moving_avg_df.to_excel('River-Data-MA.xlsx')\n",
     "lagged_ma_df.to_excel('River-Data-MA-Lagged.xlsx')\n",
     "weighted_ma_df.to_excel('River-Data-WMA.xlsx')\n",
-    "lagged_ma_df.to_excel('River-Data-WMA-Lagged.xlsx')"
+    "lagged_wma_df.to_excel('River-Data-WMA-Lagged.xlsx')"
    ]
   },
   {
