--- a/cob107/cw2/MLP-Models.ipynb
+++ b/cob107/cw2/MLP-Models.ipynb
@@ -1210,6 +1210,12 @@
     "    print(prediction_results)\n",
     "    print(error_metrics)\n",
     "    predictions.plot(y=[\"Actual Values\", \"Predicted Values\"])\n",
+    "    \n",
+    "    return {\n",
+    "        \"training_results\": training_results,\n",
+    "        \"predictions\": predictions,\n",
+    "        \"error_metrics\": error_metrics\n",
+    "    }\n",
     "\n",
     "build_train_test(features, targets, (8,3,1), \"linear\")"
    ]
