more experimentation in sandbox

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -29,9 +29,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.71660054, -1.23652683,  0.71177714, -0.47852737],\n",
-       "       [ 1.6732751 ,  2.14430189, -0.70409514,  2.36772099],\n",
-       "       [-0.73251587,  0.58623299, -2.60212476,  1.09757667]])"
+       "array([[ 0.68431032, -0.90778851,  0.93301996, -0.47148466],\n",
+       "       [ 0.78689989,  2.75906674,  0.1912874 , -1.32480048],\n",
+       "       [ 0.84848619, -2.20779653,  1.12998424, -0.33293467]])"
       ]
      },
      "execution_count": 3,
@@ -62,9 +62,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.0393399 , -0.17653146,  1.3577612 ],\n",
-       "       [ 0.01144543, -0.07052044,  0.65314703],\n",
-       "       [-0.24793355, -0.74128178,  1.64384583]])"
+       "array([[-0.50381247, -0.06931424,  2.7924775 ],\n",
+       "       [-0.05058894, -0.10198521,  1.06553755],\n",
+       "       [ 0.20327426, -0.40919466, -1.31072933]])"
       ]
      },
      "execution_count": 5,
@@ -113,13 +113,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.62828549],\n",
-       "       [-1.08057475],\n",
-       "       [ 1.24241342],\n",
+       "array([[-0.38796114],\n",
+       "       [-0.97664617],\n",
+       "       [-2.20665468],\n",
        "       ...,\n",
-       "       [-0.15592413],\n",
-       "       [ 0.11621306],\n",
-       "       [ 0.65889786]])"
+       "       [ 0.0799612 ],\n",
+       "       [-1.37700337],\n",
+       "       [ 0.31183263]])"
       ]
      },
      "execution_count": 7,
@@ -138,25 +138,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-8878cc26a916>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ True,  True, False],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.random.randn(3,4)\n",
-    "b = np.random.randn(4,1)\n",
-    "c = np.array([])\n",
-    "\n",
-    "for i in range(3):\n",
-    "    for j in range(4):\n",
-    "        c[i][j] = a[i][j] + b[j]"
+    "arr_1 = np.random.randn(3, 3)\n",
+    "arr_1 < 0.5"
    ]
   },
   {
@@ -187,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "(4, 1)"
+       "(4,)"
       ]
      },
      "execution_count": 10,
@@ -196,10 +192,10 @@
     }
    ],
    "source": [
-    "A = np.random.randn(4,3)\n",
+    "x = np.random.rand(4, 5)\n",
     "\n",
-    "B = np.sum(A, axis = 1, keepdims = True)\n",
-    "B.shape"
+    "y = np.sum(x, axis=1)\n",
+    "y.shape"
    ]
   },
   {
