--- a/neural-networks/basic-neural-net-2.ipynb
+++ b/neural-networks/basic-neural-net-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,38 +11,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BasicAnn:\n",
-    "    def __init__(self, layers, learning_rate):\n",
-    "        self.layers = layers\n",
-    "        self.learning_rate = learning_rate\n",
-    "        self.biases = [np.zeros((s,1)) for s in layers[1:]]\n",
-    "        self.weight_shapes = [(layers[i+1], layers[i]) for i in range(len(layers)-1)]\n",
-    "        self.weights = [np.random.standard_normal(shape) for shape in self.weight_shapes]\n",
+    "    def __init__(self, layers):\n",
+    "        self._layers = layers\n",
+    "        self._num_layers = len(layers)\n",
+    "        self._parameters = self._set_parameters(layers)\n",
+    "        self._activations = {}\n",
+    "        self._linear_acts = {}\n",
     "        \n",
-    "    def _sigmoid(self, x):\n",
-    "        return 1 / (1 + np.exp(-x))\n",
-    "\n",
-    "    def _sigmoid_deriv(self, x):\n",
-    "        return self._sigmoid(x) * (1 - self._sigmoid(x))\n",
+    "    def _set_parameters(self, layers):\n",
+    "        L = self._num_layers\n",
+    "        parameters = {}\n",
+    "        \n",
+    "        for l in range(1, L):\n",
+    "            parameters[f\"W{l}\"] = np.random.randn(layers[l][0], layers[l-1][0]) * 0.01\n",
+    "            parameters[f\"b{l}\"] = np.zeros((layers[l][0], 1)) * 0.01\n",
+    "        \n",
+    "        return parameters\n",
     "    \n",
-    "    def predict(self, input_vector):\n",
-    "        layer_1 = np.dot(input_vector, self.weights) + self.bias\n",
-    "        layer_2 = self._sigmoid(layer_1)\n",
-    "        return layer_2\n",
+    "    def _activation(self, x, activ_func):\n",
+    "        if activ_func == \"sigmoid\":\n",
+    "            return 1/(1+np.exp(-x))\n",
+    "        elif activ_func == \"tanh\":\n",
+    "            return (np.exp(x)-np.exp(-x))/(np.exp(x)+np.exp(-x))\n",
+    "        elif activ_func == \"relu\":\n",
+    "            return x * (x > 0)\n",
+    "        elif activ_func == \"linear\":\n",
+    "            return x\n",
     "    \n",
-    "myAnn = BasicAnn((2,3,5,2), 0.01)"
+    "    def forward_pass(self, X):\n",
+    "        act = X\n",
+    "        L = self._num_layers\n",
+    "        \n",
+    "        for l in range(1, L):\n",
+    "            W, b = self._parameters[f\"W{l}\"], self._parameters[f\"b{l}\"]\n",
+    "            Z = np.dot(W, act) + b\n",
+    "            act = self._activation(Z, self._layers[l][1])\n",
+    "            self._linear_acts[f\"Z{l}\"] = Z\n",
+    "            self._activations[f\"A{l}\"] = act\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = np.random.randn(5,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myAnn = BasicAnn(((5,\"input\"),(4, \"relu\"),(1, \"sigmoid\")))\n",
+    "myAnn.forward_pass(X)"
+   ]
   },
   {
    "cell_type": "code",
